# framework.multimedia.libmm-camcorder

./: .gitignore  configure.ac  mm-camcorder.pc.in  project.config
mobile/src/: mm_camcorder_audiorec.c  mm_camcorder_exifinfo.c  mm_camcorder_gstcommon.c  mm_camcorder_internal.c  mm_camcorder_stillshot.c  mm_camcorder_videorec.c
mobile/src/include/: mm_camcorder_exifinfo.h
packaging/: libmm-camcorder.spec
src/: Makefile.am  mm_camcorder.c  mm_camcorder_attribute.c  mm_camcorder_audiorec.c  mm_camcorder_configure.c  mm_camcorder_exifinfo.c  mm_camcorder_gstcommon.c  mm_camcorder_internal.c  mm_camcorder_platform.c  mm_camcorder_sound.c  mm_camcorder_stillshot.c  mm_camcorder_util.c  mm_camcorder_videorec.c
src/include/: mm_camcorder.h  mm_camcorder_attribute.h  mm_camcorder_gstcommon.h  mm_camcorder_internal.h  mm_camcorder_stillshot.h  mm_camcorder_util.h  mm_camcorder_videorec.h
test/: Makefile.am  mm_camcorder_testsuite.c
wearable/: .gitignore  configure.ac
wearable/src/: Makefile.am  mm_camcorder.c  mm_camcorder_attribute.c  mm_camcorder_audiorec.c  mm_camcorder_configure.c  mm_camcorder_exifinfo.c  mm_camcorder_gstcommon.c  mm_camcorder_internal.c  mm_camcorder_platform.c  mm_camcorder_sound.c  mm_camcorder_stillshot.c  mm_camcorder_util.c  mm_camcorder_videorec.c
wearable/src/include/: mm_camcorder.h  mm_camcorder_attribute.h  mm_camcorder_exifinfo.h  mm_camcorder_gstcommon.h  mm_camcorder_internal.h  mm_camcorder_platform.h  mm_camcorder_sound.h  mm_camcorder_stillshot.h  mm_camcorder_util.h  mm_camcorder_videorec.h
wearable/test/: Makefile.am  mm_camcorder_testsuite.c
